# demo_mini_rag

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.scratch/workspace-knowledge-base/issues/: 01-knowledge-base-settings-and-management-shell.md  02-async-import-jobs-and-management-status.md  03-document-import-pipeline-and-document-governance.md  04-versioned-rebuild-and-active-version-switch.md  05-chat-knowledge-answering-orchestration.md  06-retrieval-trace-sources-and-sse-citations.md
backend/: __init__.py
backend/app/: chat_events.py  config.py  db.py  logging_config.py  main.py  models.py  prompt_builder.py  routes.py  schemas.py  sse.py
backend/app/services/: catalog_service.py  chat_service.py  kb_document_service.py  kb_job_service.py  openai_service.py  turn_orchestration.py
docs/adr/: 0001-langchain-chat-backend.md  0002-workspace-owned-chat-settings.md  0003-workspace-knowledge-base-and-qdrant-topology.md  0004-asynchronous-knowledge-base-jobs-and-versioned-rebuild.md  0005-knowledge-answering-orchestration-and-citations.md
docs/agents/: domain.md
docs/prd/: langchain-chat-backend-migration-checklist.md  langchain-chat-backend-migration.md  workspace-chat-redesign.md  workspace-knowledge-base.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  types.ts
frontend/src/lib/: sse.ts  (+1 more)
tests/: conftest.py  test_api.py  test_db_init.py  test_qdrant_server_config.py
(+1 files in other folders)
