[project]
name = "demo-chatgpt"
version = "0.1.0"
description = "Minimal ChatGPT-like web app with FastAPI, React, SQLite, and OpenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.0.1",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-fastembed>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "markitdown[pdf]>=0.1.5",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
]
